--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "bracketSpacing": false
+    "bracketSpacing": false,
+    "proseWrap": "always"
   }
 }
